infra/kustomize/prometheus/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  parentRefs:
    - name: public
      namespace: cilium-system
  hostnames:
    - prometheus.62a.quanianitis.com
  rules:
    - backendRefs:
        - name: prometheus-server
          port: 80
